IDE warnings (Java, Spring, JUnit)